# yandex-direct-python-v5

./: .gitignore  README.md  pyproject.toml
tests/: test_client.py
yandex_direct/: __init__.py  client.py  config.py  exceptions.py  reports.py  transport.py  v4.py  validators.py
